--- a/.github/workflows/check-scientific-thesis-a4-both-biblatex-2024-true.yml
+++ b/.github/workflows/check-scientific-thesis-a4-both-biblatex-2024-true.yml
@@ -2641,11 +2641,11 @@ jobs:
         if: always()
         run: echo -e ${TABLE} >> $GITHUB_STEP_SUMMARY
       - run: |
-          gh run list -L 100 --json databaseId -s queued | jq -r '.[] | .databaseId' | \
+          gh run list -L 100 --json databaseId -s queued -c ${{ github.sha }} | jq -r '.[] | .databaseId' | \
           while read -r run_id; do
             gh run cancel "$run_id" || true
           done
-          gh run list -L 100 --json databaseId -s in_progress | jq -r '.[] | .databaseId' | \
+          gh run list -L 100 --json databaseId -s in_progress -c ${{ github.sha }} | jq -r '.[] | .databaseId' | \
           while read -r run_id; do
             gh run cancel "$run_id" || true
           done
