--- a/generators/app/templates/Dockerfile.iot
+++ b/generators/app/templates/Dockerfile.iot
@@ -1,14 +1,6 @@
 FROM registry.gitlab.com/islandoftex/images/texlive:<% switch (texlive) {
-  case 2024: %>latest-basic<% break;
+  case 2024: %>latest-latest<% break;
   case 2023: %>TL2023-historic<% break;
 } -%>
 
 WORKDIR /workdir
-
-COPY Texlivefile /workdir/
-<% if (texlive == 2024) { -%>
-
-RUN xargs tlmgr install --repository https://tug.ctan.org/systems/texlive/tlnet/ < /workdir/Texlivefile
-
-RUN tlmgr path add
-<% } -%>
