--- a/.github/workflows/check-docker.yml
+++ b/.github/workflows/check-docker.yml
@@ -65,6 +65,7 @@ jobs:
           node-version: '22'
           cache: 'npm'
       - run: npm ci
+        working-directory: ${{ github.workspace }}/code
       - run: npm install -g yo
       - name: Create lncs-reitzig
         run: yo ${{ github.workspace }}/code/generators/app/index.js --documentclass=lncs --papersize=a4 --latexcompiler=pdflatex --bibtextool=bibtex --texlive=2024 --docker=reitzig --overleaf=no --lang=en --font=default --listings=minted --enquotes=csquotes --tweakouterquote=babel --todo=pdfcomment --examples=true --howtotext=true
@@ -108,6 +109,7 @@ jobs:
           node-version: '22'
           cache: 'npm'
       - run: npm ci
+        working-directory: ${{ github.workspace }}/code
       - run: npm install -g yo
       - name: Create lncs-${{ matrix.docker }}
         run: yo ${{ github.workspace }}/code/generators/app/index.js --documentclass=lncs --papersize=a4 --latexcompiler=pdflatex --bibtextool=bibtex --texlive=2024 --docker=${{ matrix.docker }} --overleaf=no --lang=en --font=default --listings=minted --enquotes=csquotes --tweakouterquote=babel --todo=pdfcomment --examples=true --howtotext=true
