--- a/.github/workflows/check-docker.yml
+++ b/.github/workflows/check-docker.yml
@@ -64,6 +64,7 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
+          cache-dependency-path: 'code/package-lock.json'
       - run: npm ci
         working-directory: ${{ github.workspace }}/code
       - run: npm install -g yo
@@ -108,6 +109,7 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
+          cache-dependency-path: 'code/package-lock.json'
       - run: npm ci
         working-directory: ${{ github.workspace }}/code
       - run: npm install -g yo
