--- a/.github/workflows/check-docker.yml
+++ b/.github/workflows/check-docker.yml
@@ -130,7 +130,7 @@ jobs:
           context: .
           tags: localhost:5000/name/app:latest
       - name: Build paper.tex
-        run: docker run -v $(pwd):/workdir localhost:5000/name/app:latest "latexmk paper.tex"
+        run: docker run -v $(pwd):/workdir localhost:5000/name/app:latest latexmk paper.tex
       - uses: actions/upload-artifact@v4
         with:
           name: result
