--- a/.github/workflows/check-docker.yml
+++ b/.github/workflows/check-docker.yml
@@ -134,4 +134,4 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: result
-          path: /workdir/paper.pdf
+          path: paper.pdf
