--- a/.github/workflows/check-docker.yml
+++ b/.github/workflows/check-docker.yml
@@ -88,7 +88,7 @@ jobs:
         run: docker run -v $(pwd):/work/src -v /tmp/out:/work/out localhost:5000/name/app:latest work "latexmk paper.tex"
       - uses: actions/upload-artifact@v4
         with:
-          name: result
+          name: result-reitzig
           path: /tmp/out
   check-iot-dante:
     runs-on: ubuntu-latest
@@ -133,5 +133,5 @@ jobs:
         run: docker run -v $(pwd):/workdir localhost:5000/name/app:latest latexmk paper.tex
       - uses: actions/upload-artifact@v4
         with:
-          name: result
+          name: result-${{ matrix.docker }}
           path: paper.pdf
