--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -67,6 +67,8 @@ jobs:
         run: yo ${{ github.workspace }}/code/generators/app/index.js --documentclass=lncs --papersize=a4 --latexcompiler=pdflatex --bibtextool=bibtex --texlive=2024 --docker=reitzig --overleaf=no --lang=en --font=default --listings=minted --enquotes=csquotes --tweakouterquote=babel --todo=pdfcomment --examples=true --howtotext=true
       - name: Install TeX Live
         uses: zauguin/install-texlive@v3
+        with:
+          package_file: '${{ github.workspace }}/Texlivefile'
       - run: make pdf
       - run: make aspell
       - run: make format
