--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -51,7 +51,7 @@ jobs:
           echo "| -- | -- |" >> $GITHUB_STEP_SUMMARY
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
             # One could add a personal dictionary using --personal=.aspell.en.pws
-            words=$(aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 list < $tex | sort | uniq | tr '\n' ' ')
+            words=$(aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.en.pws list < $tex | sort | uniq | tr '\n' ' ')
             if [ -z "$words" ]; then
               echo "| $tex | ✅ |" >> $GITHUB_STEP_SUMMARY
             else
