--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -24,6 +24,20 @@ jobs:
             cp "_latexmkrc" "latexmkrc"
           fi
       - run: latexmk <%= filenames.main %>
+<% if (githubpublish || (lang == "en") && (reallatexcompiler == "lualatex")) { -%>
+      - uses: bscott-zebra/cache-apt-pkgs-action@bdb5bbaae8f11b3e4e63cf78e303ac1519dcff7f
+        with:
+          packages: aspell aspell-en<% if (language == 'de') { %> aspell-de<% } %>
+          version: 1.0
+          execute_install_scripts: true
+      - name: aspell
+        run: |
+          for tex in $(ls *.tex content/*.tex 2>/dev/null); do
+            # The lualatex package "spelling" requires the content to be in a file ending with ".spell.bad"
+            aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.en.pws list < $tex | sort | uniq >> <%= filenames.main %>.spell.bad
+          done
+      - run: latexmk <%= filenames.main %>
+<% } -%>
       - uses: actions/upload-artifact@v4
         with:
           name: test-result
