--- a/generators/app/templates/dot.aspell.conf
+++ b/generators/app/templates/dot.aspell.conf
@@ -20,7 +20,7 @@ add-tex-command frac pp
 add-tex-command hypersetup p
 add-tex-command label p
 add-tex-command languageshorthands p
-add-tex-command lstset p
+add-tex-command lstset ppppppppppppppppppppppp
 add-tex-command mathit p
 add-tex-command newcommand pp
 add-tex-command oname p
@@ -28,11 +28,11 @@ add-tex-command patchcmd ppp
 add-tex-command renewcommand pp
 add-tex-command restoresymbol pp
 add-tex-command savesymbol p
-add-tex-command setmainfont oooop
-add-tex-command setmathfont oooop
-add-tex-command setminted p
-add-tex-command setmonofont oooop
-add-tex-command setsansfont oooop
+add-tex-command setmainfont ooooppppppppppp
+add-tex-command setmathfont ooooppppppppppp
+add-tex-command setminted ppppppp
+add-tex-command setmonofont ooooppppppppppp
+add-tex-command setsansfont oooooooopppppppppppp
 add-tex-command tcbinputlisting ppppppppppppppppppppppp
 add-tex-command texttt p
 add-tex-command tikzpicture op
