--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: latexmk <%= filenames.main %>
+name: Check
 on:
   push:
   workflow_dispatch:
@@ -7,6 +7,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   pdf:
+    name: latexmk <%= filenames.main %>
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
