--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -64,6 +64,7 @@ jobs:
         run: |
           echo "| file | status |" >> $GITHUB_STEP_SUMMARY
           echo "| -- | -- |" >> $GITHUB_STEP_SUMMARY
+          failure=0
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
             # One could add a personal dictionary using --personal=.aspell.en.pws
             # Words are output in the order they appear in the document
@@ -72,8 +73,16 @@ jobs:
               echo "| $tex | ✅ |" >> $GITHUB_STEP_SUMMARY
             else
               echo "| $tex | ❌ $words |" >> $GITHUB_STEP_SUMMARY
+              if [[ "$filename" == "<%= filenames.main %>.tex" ]]; then
+                failure=1
+              fi
             fi
           done
+          if [[ "$failure" -eq 1 ]]; then
+             echo "" >> $GITHUB_STEP_SUMMARY
+             echo "If you want to ignore words, add them to <%= filenames.main %>.spell.good"
+            exit 1
+          fi
   indent:
     runs-on: ubuntu-latest
     steps:
