--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -44,6 +44,20 @@ jobs:
       - run: latexmk <%= filenames.main %>
 
 <% } -%>
+      - uses: actions/upload-artifact@v4
+        with:
+          name: test-result
+          path: |
+            <%= filenames.main %>.pdf
+  word-count:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v4
+      - name: Install TeX Live
+        uses: zauguin/install-texlive@v3
+        with:
+          package_file: '${{ github.workspace }}/Texlivefile'
       - name: Count words
         run: |
           texcount -utf8 -inc -out-stderr <%= filenames.main %>.tex > texcount.txt
