--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -44,7 +44,10 @@ jobs:
       - run: latexmk <%= filenames.main %>
 
       - name: Job summary using texlogsieve
-        run: texlogsieve < <%= filenames.main %>.log >> $GITHUB_STEP_SUMMARY || true
+        run: |
+          echo "```" >> $GITHUB_STEP_SUMMARY || true
+          texlogsieve < <%= filenames.main %>.log >> $GITHUB_STEP_SUMMARY || true
+          echo "```" >> $GITHUB_STEP_SUMMARY || true
 <% } -%>
       - uses: actions/upload-artifact@v4
         with:
